@@ -63,8 +63,8 @@ class AbstractIntegratorTest {
         // WHEN
         integrator.integrate(testProblem, initialState, finalTime);
         // THEN
-        assertEquals(1, ((UpdateStepTestHandler) integrator.getStepHandlers().get(0)).getUpdateStepCounter());
-        assertEquals(3, ((UpdateStepTestHandler) integrator.getStepHandlers().get(0)).getHandlerStepCounter());
+        assertEquals(1, ((UpdateStepTestHandler) integrator.getStepHandlers().getFirst()).getUpdateStepCounter());
+        assertEquals(3, ((UpdateStepTestHandler) integrator.getStepHandlers().getFirst()).getHandlerStepCounter());
     }
 
     private static class TestDetector implements ODEEventDetector {
