@@ -194,8 +194,8 @@ public class HS351Test {
         final double tolerance = 1.0e-5 * (Math.abs(fExpected) + 1.0);
         
         // Check if the solution is close to or better than the expected minimum.
-        assertTrue(f <= fExpected + tolerance, 
-                   String.format("Objective value mismatch/worse than expected. Expected: %.8f, Actual: %.8f", fExpected, f));
+        assertTrue(f <= fExpected + tolerance,
+                "Objective value mismatch/worse than expected. Expected: %.8f, Actual: %.8f".formatted(fExpected, f));
         
         // Check if the variables are close to the expected optimal values (XEX)
         // XEX(1)=2.7143661D+1, XEX(2)=140.43580D+3, XEX(3)=1707.5155D+4, XEX(4)=31.512867D+2
